--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,43 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="{% url 'home' %}">Newspaper</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+              data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expand="false"
+              aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          {% if user.is_authenticated %}
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <a class="nav-link dropdown-tobble" href="#"
+                      id="navbarDropdown" role="button" data-toggle="dropdown"
+                      aria-baspopup="true" aria-expanded="false">
+                    {{ user.username }}
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-lg-right"
+                        aria-labelled-by="navbarDropdown">
+                    <a class="dropdown-item"
+                        href="{% url 'password_change' %}"Change password</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'logout' %}">
+                      Log Out</a>
+                  </div>
+                </li>
+            </ul>
+          {% else %}
+            <form class="form-inline ml-auto">
+              <a href="{% url 'login' %}" class="btn btn-outline-secondary">
+                Log In</a>
+              <a href="{% url 'signup' %}" class="btn btn-primary ml-2">
+                Sign Up</a>
+            </form>
+          {% endif %}
+      </div>
+    </nav>
     <main>
       {% block content %}
       {% endblock content %}
