Debug broken dropdown

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,8 @@
                   <div class="dropdown-menu dropdown-menu-lg-right"
                         aria-labelled-by="navbarDropdown">
                     <a class="dropdown-item"
-                        href="{% url 'password_change' %}"Change password</a>
+                        href="{% url 'password_change' %}">
+                        Change password</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'logout' %}">
                       Log Out</a>
