--- a/templates/base.html
+++ b/templates/base.html
@@ -46,8 +46,10 @@
       </div>
     </nav>
     <main>
-      {% block content %}
-      {% endblock content %}
+      <div class="container">
+        {% block content %}
+        {% endblock content %}
+      </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
